# engineers-tools-rs

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
backend/: .env.example  Cargo.toml  Makefile
backend/src/: docs.rs  handlers.rs  main.rs  models.rs  server.rs
backend/src/features/: mod.rs  monitor.rs  scn_generations.rs
backend/src/features/potok/: condition_generations.rs  mod.rs
backend/src/features/snmp/: mod.rs  models.rs  monitor.rs  parsers.rs
backend/src/shared/: error.rs  mod.rs
frontend/: index.html
frontend/css/: main.css
frontend/js/: core.js  generate.js  info.js  parse.js
frontend/js/features/common/: gen_scn.js  info.js  monitor.js
frontend/js/features/potok/: generator.js
src/: docs.rs  handlers.rs  main.rs  server.rs  single_instance.rs
