[package]
name = "traffic-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["ws"] }
chrono = "0.4.44"
clipboard = "0.5.0"
colored = "3.1.1"
dotenvy = "0.15.7"
futures-util = "0.3.32"
mime_guess = "2.0.5"
rand = "0.10.0"
rust-embed = "8.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
single-instance = "0.3.3"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
# traffic_core = { version = "0.1.0", path = "../../traffic-core" }
traffic-controller = { path = "../../traffic-rs/traffic-controller" }
traffic-tools-rs = { path = "../../traffic-tools-rs/" }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
webbrowser = "1.1.0"

# Настройки оптимизации
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
incremental = false

[target."cfg(windows)".dependencies]
winapi = { version = "0.3.9", features = ["minwindef", "profileapi", "sysinfoapi"] }
